--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -1,16 +1,21 @@
-name: Unit tests
+name: Build and Deploy to GitHub Pages
 on: [push]
 
 jobs:
-  build_and_test:
-    name: Rust project
+  build_and_deploy:
+    name: Build and Deploy to GitHub Pages
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{secrets.REPO_PAT}}
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - run: cargo install wasm-pack
+      # Much faster tahn cargo install
+      - uses: jetli/wasm-pack-action@v0.4.0
+      - run: git config --global user.email 'github@actions.com' && git config --global user.name 'GitHub Action'
+      - run: ./deploy-gh-pages.sh
